Fixed portal footer alignment
Fixed portal footer alignment

Issue-ID: PORTAL-979

--- a/portal-FE-common/src/app/layout/components/footer/footer.component.scss
+++ b/portal-FE-common/src/app/layout/components/footer/footer.component.scss
@@ -50,3 +50,7 @@ $topnav-background-color: #222;
   margin-top: 20px;
   text-align: center;
 }
+
+.portal-footer{ 
+  margin-top: calc(100vh - 620px);
+}
